<resources>
    <string name="app_name" translatable="false">AGMTAssets</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_username" translatable="false">UserName</string>
    <string name="btn_login" translatable="false">Login</string>
    <string name="font_normal" translatable="false">Avenir-Roman.ttf</string>
    <string name="font_bold" translatable="false">circular-bold.ttf</string>
    <string name="font_medium" translatable="false">din_pro_medium.otf</string>
    <string name="font_heavy" translatable="false">Avenir_heMediumOblique-webfont.ttf</string>
    <string name="font_demi_bold" translatable="false">Avenir_Next_Demi_Bold.ttf</string>
    <string name="font_avenir_medium" translatable="false">Avenir_Next_Medium.ttf</string>
    <string name="font_italic" translatable="false">AvenirNextMediumItalic.ttf</string>
    <string name="no_internet" translatable="false">Your internet seems to be offline!</string>
    <string name="marquee" translatable="false">Your internet seems</string>
    <string name="app_Name" translatable="false">Road Assets \n Monitoring \n And Tracking</string>
    <string name="init_vector" translatable="false">2SN22SkJGDyOAXUU</string>
    <string name="font_circular_book" translatable="false">circular-book.ttf</string>
    <string name="lexenddeca_regular">lexenddeca_regular.ttf</string>
    <string name="lexenddeca_semibold">lexenddeca_semibold.ttf</string>
    <string name="lexenddeca_thin">lexenddeca_thin.ttf</string>
    <string name="lexenddeca_medium">lexenddeca_medium.ttf</string>
    <string name="lexenddeca_light">lexenddeca_light.ttf</string>
    <string name="lexenddeca_extralight">lexenddeca_extralight.ttf</string>
    <string name="lexenddeca_extrabold">lexenddeca_extrabold.ttf</string>
    <string name="lexenddeca_bold">lexenddeca_bold.ttf</string>
    <string name="lexenddeca_black">lexenddeca_black.ttf</string>
    <string name="software_designed_amp_developed_by_nic"><![CDATA[Software Designed & Developed by NIC]]></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="welcome">Welcome</string>
    <string name="choose_habitation">Choose Habitation</string>
    <string name="choose_form">Choose Form</string>

    <!--<string name="take_photo">Take Photo</string>-->
    <string name="close">close</string>
    <string name="add_photo">Add Photo</string>
    <string name="save_image_local">SAVE IMAGE LOCAL</string>
    <string name="habitation_name">Habitation Name</string>
    <string name="gps_is_not_turned_on">GPS is not turned on...</string>
    <string name="satellite">Satellite communication not available to get GPS Co-ordination Please Capture Photo in Open Area...</string>
    <string name="permission_required">Permissions required!</string>
    <string name="camera_need_permission">Camera needs few permissions to work properly. Grant them in settings.</string>
    <string name="goto_settings">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="user_canceled_image_capture">User cancelled image capture</string>
    <string name="sorry_failed_to_capture">Sorry! Failed to capture image</string>
    <string name="user_canceled_video">User cancelled video recording</string>
    <string name="sorry_failed_capture_video">Sorry! Failed to record video</string>
    <string name="inserted_success">Inserted Success!</string>
    <string name="updated_success">Updated Success!</string>
    <string name="please_enter_description">Please Enter Description</string>
    <string name="please_capture_image">Please Capture Image</string>
    <string name="maximum_three_photos">Maximum three Photo allowed</string>
    <string name="first_capture_image_add_another">First Capture Image then add another Image!</string>
    <string name="at_least_capture_one_photo">At least Capture one Photo</string>
    <string name="pending_screen">Pending Screen</string>

    <string name="do_you_wnat_to_upload">Do You Want to Upload?</string>
    <string name="do_you_wnat_to_delete">Do You Want to Delete?</string>
    <string name="view_photos">View Photos</string>
    <string name="upload_data">Upload Data</string>
    <string name="maximum_photos_reached">Maximum Photos Reached</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="middle">Middle</string>
    <string name="google_maps_key">AIzaSyDrpebleLz3qFDjczT35JU582PYVUPRWxY</string>
    <string name="take_photo">Take Photo</string>
    <string name="how_many_photos_do_you_want_to_take">How many photos do you want to take?</string>
    <string name="go">Go</string>
</resources>
