<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nic.AGMTAssets.Activity.NewPendingScreen">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/new_gradient_bg_bottom_curved">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/pending_screen"
                android:fontFamily="@string/lexenddeca_regular"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/village_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/designation_name"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_below="@id/village_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"></TextView>
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_rl"
            android:layout_below="@id/toolbar">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pending_recycler"
                />

        </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_data_icon"
            android:scaleType="fitEnd"
            android:layout_centerInParent="true"
            android:src="@drawable/new_no_result_image"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:id="@+id/upload_btn"
            android:background="@drawable/new_lig_in_btn_gradient_bg"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:textColor="@color/white"
            android:text="@string/upload_data"
            android:textAllCaps="false"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@string/lexenddeca_regular"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>
