<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/new_gradient_bg"
        android:id="@+id/toolbar">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:src="@drawable/filter_icon"
            android:id="@+id/filter_icon"
            android:padding="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:layout_below="@id/toolbar"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <RelativeLayout
        android:background="@drawable/map_bg_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:id="@+id/filter_layout">

        <LinearLayout
            android:layout_margin="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:id="@+id/habitation_text"
                android:text="@string/choose_habitation"/>

            <RelativeLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/line_bg_new">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/habitation_spinner"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:id="@+id/choose_form"
                android:text="@string/choose_form"/>

            <RelativeLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/line_bg_new">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/form_spinner"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pink"
                android:textSize="@dimen/_15sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/go"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
