<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nic.AGMTAssets.Activity.FormPrimaryDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_text_color">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:id="@+id/user_profile"
                android:src="@drawable/user_profile_new_icon"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:id="@+id/map_icon"
                android:src="@drawable/google_map_icon"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerVertical="true"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/village_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/designation_name"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_below="@id/village_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"></TextView>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:background="@drawable/rect_topside_curve_habitation_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text_color"
                android:fontFamily="@string/lexenddeca_regular"
                android:textSize="@dimen/_13sdp"
                android:padding="@dimen/_10sdp"
                android:id="@+id/text_view_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/choose_habitation"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@string/lexenddeca_regular"
                android:textSize="@dimen/_13sdp"
                android:padding="@dimen/_10sdp"
                android:id="@+id/form_name"
                android:layout_below="@+id/text_view_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/choose_habitation"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/form_name"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rect_topside_curve_white_bg">

                <View
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_3sdp"
                    android:id="@+id/view_2"
                    android:background="@color/vertical_line_grey"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_7sdp"></View>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/habitation_recycler"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/_10sdp"
                    >
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_30sdp"
                        android:text="@string/take_photo"
                        android:id="@+id/take_photo"
                        android:background="@drawable/btn_bg_"
                        android:textColor="@color/white"
                        android:fontFamily="@string/lexenddeca_regular"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_30sdp"
                        android:text="@string/view_photos"
                        android:id="@+id/view_photo"
                        android:background="@drawable/log_in_btn_bg_new"
                        android:textColor="@color/primary_text_color"
                        android:fontFamily="@string/lexenddeca_regular"/>

                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
